Added endpoint for getting guards by skills
