# src/services/requests.ts
@@ -1,18 +1,20 @@
 import prisma from "../lib/prisma";
 import { CustomError, HTTPStatusCode, InternalErrorMessages } from "../types/error";
-import { CreateRequestArgs, RequestResponse } from "../types/requests";
+import { CreateRequestArgs, RequestResponse, UpdateRequest } from "../types/requests";
 import { formatError } from "../utils/functions";
 
 const createRequest = async ({
   userId,
   description,
-  isDriver,
-  isGuard,
-  hasGun,
   isTaken,
   startingAddress,
-  isActive,
   endingAddress,
+  startingTime,
+  endingTime,
+  isGuard,
+  isDriver, 
+  hasGun,
+  hasVehicle,
 }: CreateRequestArgs): Promise<RequestResponse> => {
   try {
     const user = await prisma.user.findUnique({
@@ -36,13 +38,16 @@ const createRequest = async ({
       data: {
         userId: user.id,
         description: description,
-        isDriver: isDriver,
-        hasGun: hasGun,
-        isGuard: isGuard,
         isTaken: isTaken,
         startingAddress: startingAddress,
         endingAddress: endingAddress,
-        isActive: isActive,
+        isActive: true,
+        startingTime: startingTime,
+        endingTime: endingTime,
+        isGuard: isGuard,
+        isDriver: isDriver,
+        hasGun: hasGun,
+        hasVehicle: hasVehicle,
       },
     });
 
@@ -71,13 +76,16 @@ const getRequestById = async (id: number): Promise<RequestResponse> => {
         id: true,
         userId: true,
         description: true,
-        isDriver: true,
-        hasGun: true,
-        isGuard: true,
         isTaken: true,
         startingAddress: true,
         endingAddress: true,
         isActive: true,
+        startingTime: true,
+        endingTime: true,
+        isGuard: true,
+        isDriver: true,
+        hasGun: true,
+        hasVehicle: true,
       },
     });
 
@@ -126,15 +134,18 @@ const getRequestsByUserId = async (userId: number): Promise<RequestResponse[]> =
       select: {
         id: true,
         description: true,
-        isDriver: true,
-        hasGun: true,
-        isGuard: true,
         user: true,
         guard: true,
         isTaken: true,
         startingAddress: true,
         endingAddress: true,
         isActive: true,
+        startingTime: true,
+        endingTime: true,
+        isGuard: true,
+        isDriver: true,
+        hasGun: true,
+        hasVehicle: true,
       },
     });
 
@@ -159,15 +170,160 @@ const getAllRequests = async (): Promise<RequestResponse[]> => {
       select: {
         id: true,
         description: true,
-        isDriver: true,
-        hasGun: true,
-        isGuard: true,
         isTaken: true,
         user: true,
         guard: true,
         startingAddress: true,
         endingAddress: true,
         isActive: true,
+        startingTime: true,
+        endingTime: true,
+        isGuard: true,
+        isDriver: true,
+        hasGun: true,
+        hasVehicle: true,
+      },
+    });
+
+    if (!requests) {
+      throw new CustomError({
+        message: "Requests not found",
+        statusCode: HTTPStatusCode.NOT_FOUND,
+        internalMessage: InternalErrorMessages.REQUEST_NOT_FOUND,
+      });
+    }
+
+    return requests;
+  } catch (e) {
+    const error = formatError(e);
+    throw error;
+  }
+};
+
+const updateRequestToTaken = async (id: number, guardId: number): Promise<RequestResponse> => {
+  try {
+    const request = await prisma.request.findUnique({
+      where: {
+        id: id,
+      },
+      select: {
+        id: true,
+      },
+    });
+
+    if (!request) {
+      throw new CustomError({
+        message: "Request not found",
+        statusCode: HTTPStatusCode.NOT_FOUND,
+        internalMessage: InternalErrorMessages.REQUEST_NOT_FOUND,
+      });
+    }
+
+    const updatedRequest = await prisma.request.update({
+      where: {
+        id: request.id,
+      },
+      data: {
+        isActive: false,
+        isTaken: true,
+        guardId: guardId,
+      },
+    });
+
+    return updatedRequest;
+  } catch (e) {
+    const error = formatError(e);
+    throw error;
+  }
+};
+
+const updateRequestToActive = async (id: number): Promise<RequestResponse> => {
+  try {
+    const request = await prisma.request.findUnique({
+      where: {
+        id: id,
+      },
+      select: {
+        id: true,
+      },
+    });
+
+    if (!request) {
+      throw new CustomError({
+        message: "Request not found",
+        statusCode: HTTPStatusCode.NOT_FOUND,
+        internalMessage: InternalErrorMessages.REQUEST_NOT_FOUND,
+      });
+    }
+
+    const updatedRequest = await prisma.request.update({
+      where: {
+        id: request.id,
+      },
+      data: {
+        isActive: true,
+        isTaken: false,
+        guardId: null,
+      },
+    });
+
+    return updatedRequest;
+  } catch (e) {
+    const error = formatError(e);
+    throw error;
+  }
+};
+
+const getAllRequestsForGuard = async (guardId: number): Promise<RequestResponse[]> => {
+  try {
+    const requests = await prisma.request.findMany({
+      where: {
+        guardId: guardId,
+      },
+      select: {
+        id: true,
+        description: true,
+        isTaken: true,
+        user: true,
+        guard: true,
+        startingAddress: true,
+        endingAddress: true,
+        isActive: true,
+        startingTime: true,
+      },
+    });
+
+    if (!requests) {
+      throw new CustomError({
+        message: "Requests not found",
+        statusCode: HTTPStatusCode.NOT_FOUND,
+        internalMessage: InternalErrorMessages.REQUEST_NOT_FOUND,
+      });
+    }
+
+    return requests;
+  } catch (e) {
+    const error = formatError(e);
+    throw error;
+  }
+};
+
+const getActiveRequests = async (): Promise<RequestResponse[]> => {
+  try {
+    const requests = await prisma.request.findMany({
+      where: {
+        isActive: true,
+      },
+      select: {
+        id: true,
+        description: true,
+        isTaken: true,
+        user: true,
+        guard: true,
+        startingAddress: true,
+        endingAddress: true,
+        isActive: true,
+        startingTime: true,
       },
     });
 
@@ -191,4 +347,8 @@ export const requestService = {
   getRequestById,
   getRequestsByUserId,
   getAllRequests,
+  updateRequestToTaken,
+  updateRequestToActive,
+  getAllRequestsForGuard,
+  getActiveRequests,
 };
